<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout

            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/stoke"
                android:text="@string/enter_item"
                android:textSize="18sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:fontFamily="@font/crimson_text_semibold"
                android:hint="@string/hint_name" />

            <EditText
                android:id="@+id/itemQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemName"
                android:fontFamily="@font/crimson_text_semibold"
                android:hint="@string/hint_qty"
                android:inputType="number" />

            <EditText
                android:id="@+id/itemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemQty"
                android:fontFamily="@font/crimson_text_semibold"
                android:hint="@string/hint_note" />


            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemDescription"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/stoke"
                android:text="@string/save_button"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>


